New: added the chart api
